Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1899

strtod() on Solaris does not support hex strings

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.4
    • Plugins
    • None

    Description

      For the ESI plugins, we have a regresion test:

          assert(esi_expr.evaluate("$(HTTP_COOKIE{grade}) < -0x2"));
      

      This fails, because on OmniOS / Solaris, g++ does not seem to think it can / should support hex strings. However, strtold() always conforms to C99/SUSv3 on Solaris, so we can use that.

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: