TS-1899 strtod() does not honor Hex strings on Solaris.